--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,14 +4,15 @@ services:
     image: "traefik:latest"
     restart: always
     networks:
-    - web
+      - traefik
     command:
       - --entrypoints.web.address=:80
       - --entrypoints.websecure.address=:443
+      - --api.dashboard=true
       - --providers.docker
       - --log.level=ERROR
       - --certificatesresolvers.leresolver.acme.httpchallenge=true
-      - --certificatesresolvers.leresolver.acme.email=SEU_EMAIL 
+      - --certificatesresolvers.leresolver.acme.email=SEU_EMAIL # Preencha com SEU email
       - --certificatesresolvers.leresolver.acme.storage=./acme.json
       - --certificatesresolvers.leresolver.acme.httpchallenge.entrypoint=web
     ports:
@@ -19,7 +20,7 @@ services:
       - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "/docker/traefik/acme.json:/acme.json"
+      - "/home/docker/traefik/acme.json:/acme.json"
     labels:
       # Configuração default traefik
       - "traefik.http.routers.http-catchall.rule=hostregexp(`{host:.+}`)"
@@ -32,9 +33,10 @@ services:
       - "traefik.http.routers.traefik.entrypoints=websecure"
       - "traefik.http.routers.traefik.service=api@internal"
       - "traefik.http.routers.traefik.middlewares=auth"
-      - "traefik.http.middlewares.auth.basicauth.users=AQUI_SENHA_CRIADA_APACHE"
+      # Abaixo preencher o acesso criado pelo apache no formato admin:(senha)
+      - "traefik.http.middlewares.auth.basicauth.users=SENHA_CRIPTOGRAFADA_APACHE" #OBS onde tiver "$" colocar dois "$$"
       - "traefik.http.routers.traefik.tls.certresolver=leresolver"
-      - "traefik.docker.network=web"
+      - "traefik.docker.network=traefik"
     logging:
       options:
         max-size: "10m"
@@ -42,18 +44,18 @@ services:
 
   portainer:
     container_name: portainer
-    image: portainer/portainer-ce:2.27.0-rc2-alpine
+    image: portainer/portainer-ce:2.27.0-rc2-alpine # Imagem ao seu gosto
     command: -H unix:///var/run/docker.sock
     restart: always
     networks:
-    - web
+      - traefik
     logging:
       options:
         max-size: "10m"
         max-file: "3"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /docker/portainer/data:/data
+      - /home/docker/portainer/data:/data
     labels:
       # Frontend
       - "traefik.enable=true"
@@ -62,7 +64,7 @@ services:
       - "traefik.http.services.frontend.loadbalancer.server.port=9000"
       - "traefik.http.routers.frontend.service=frontend"
       - "traefik.http.routers.frontend.tls.certresolver=leresolver"
-      - "traefik.docker.network=web"
+      - "traefik.docker.network=traefik"
 
       # Edge
       - "traefik.http.routers.edge.rule=Host(`edge.SEU_DOMINIO`)"
@@ -70,11 +72,11 @@ services:
       - "traefik.http.services.edge.loadbalancer.server.port=8000"
       - "traefik.http.routers.edge.service=edge"
       - "traefik.http.routers.edge.tls.certresolver=leresolver"
-      - "traefik.docker.network=web"
+      - "traefik.docker.network=traefik"
 
 volumes:
   portainer_data:
 
 networks:
-  web:
+  traefik:
     external: true
