--- a/service_compose_examples/compose-budibase.yml
+++ b/service_compose_examples/compose-budibase.yml
@@ -2,7 +2,7 @@ services:
   budibase:
     image: budibase/budibase:latest
     networks:
-      - web
+      - traefik
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.budibase.rule=Host(`budibase.SEU_DOMINIO`)"
@@ -10,8 +10,8 @@ services:
       - "traefik.http.services.budibase.loadbalancer.server.port=80" # 80 é a porta padrão que funciona o budibase
       - "traefik.http.routers.budibase.entrypoints=websecure"
       - "traefik.http.routers.budibase.service=budibase"
-      - "traefik.docker.network=web"
+      - "traefik.docker.network=traefik"
 
 networks:
-  web:
+  traefik:
     external: true
