--- a/service_compose_examples/compose-n8n.yml
+++ b/service_compose_examples/compose-n8n.yml
@@ -1,17 +1,17 @@
 services:
-  n8n:
-    image: n8nio/n8n:lnmp
+  budibase:
+    image: budibase/budibase
     networks:
-      - web
+      - traefik
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.n8n.rule=Host(`n8n.SEU_DOMINIO`)"
-      - "traefik.http.routers.n8n.tls.certresolver=leresolver"
-      - "traefik.http.services.n8n.loadbalancer.server.port=5678" # 5678 é a porta padrão que o n8n atende
-      - "traefik.http.routers.n8n.entrypoints=websecure"
-      - "traefik.http.routers.n8n.service=n8n"
-      - "traefik.docker.network=web"
+      - "traefik.http.routers.budibase.rule=Host(`budibase.SEU_DOMINIO`)"
+      - "traefik.http.routers.budibase.tls.certresolver=leresolver"
+      - "traefik.http.services.budibase.loadbalancer.server.port=5678" # 5678 é a porta padrão que o n8n atende
+      - "traefik.http.routers.budibase.entrypoints=websecure"
+      - "traefik.http.routers.budibase.service=budibase"
+      - "traefik.docker.network=traefik"
 
 networks:
-  web:
+  traefik:
     external: true
